--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -2,7 +2,8 @@
   place-self: center;
   padding: 40px;
   border-radius: 10px;
-  background-image: linear-gradient(45deg, #2f4680, #500ae4);
+  /* background-image: linear-gradient(45deg, #2f4680, #500ae4); */
+  background-image: url(/Users/ram/Documents/AT/Weather-App/src/assets/cloud-blue-sky.jpg);
   display: flex;
   flex-direction: column;
   align-items: center;
